# osu

./: .gitignore  NOTES.md  README.md  analyze.ipynb  build_rust.py  claudeconvo.txt  cli.py  create_dataset.py  download_dataset.py  gui.py  main.py  osu.py  profile.stats  profile.stats.new  pyproject.toml  tcn.ipynb  test.ipynb  test_slider_continuity.py  train.ipynb  train.py  train_mini.ipynb
.claude/: settings.local.json
.generated/: 1hope_map.npy  zuttosummer.npy
.trained/: 2025-07-04_02-15-58.pt  2025-07-04_02-16-18.pt  2025-07-04_02-16-23.pt  2025-07-04_02-19-21.pt  2025-07-04_19-07-16.pt  2025-07-04_19-07-49.pt  2025-07-04_20-32-31.pt  most_recent.pt
assets/: 1hope_notwhitecat_replay.osr  1hope_replay.osr  1hope_whitecat_from_web.osr  1hope_whitecat_replay.osr  carlito.osr  erm.osr  ghosts_ezchamp_replay.osr  impulse_map.osu  lemontree_map.osu  moonmen_map.osu  rally_dthr.osr  rally_map.osu  ringyou_mrekk_replay.osr
media/: .gitignore
models/: annealer.py  base.py  critic.py  discriminator.py  gan.py  jit_lstm.py  keys.py  loss.py  lstm.py  model.py  model_utils.py  rnn.py  standard_encoder_t.py  transformer.py  vae.py  wgan.py
models/vae/: avae.py  decoder.py  decoder_t.py  encoder.py  encoder_t.py  generator.py  vae.py  vae_t.py
osu/: dataset.py  downloader.py  gan.py  keys.py  model.py  model_utils.py  modifiers.txt  rnn.py  vae.py
osu/client/: controller.py  mem.py
osu/preview/: beatmap.py  hitobjects.py  preview.py
osu/rulesets/: beatmap.py  beatmap.py.backup  core.py  hitobjects.py  keys.py  mods.py  replay.py  timing_points.py
osu/rulesets/_util/: bezier.py  binfile.py  bsearch.py
osu_rust/: Cargo.toml
osu_rust/src/: beatmap.rs  lib.rs  replay.rs  types.rs
rl/: osu_rl.py  video.py
stuff/: stuff-cont.md  stuff.md
