[project]
name = "osu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dxcam>=0.0.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "maturin>=1.9.0",
    "mouse>=0.7.1",
    "mutagen>=1.47.0",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "polars>=1.31.0",
    "pyautogui>=0.9.54",
    "pygame>=2.6.1",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.0",
    "tqdm>=4.67.1",
]
