[package]
name = "osu_fast"
version = "0.1.0"
edition = "2021"

[lib]
name = "osu_fast"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
numpy = "0.20"
serde = { version = "1.0", features = ["derive"] }
byteorder = "1.4"
lzma-rs = "0.3"

